Fixed catagorie buttons and uhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

--- a/Steal/WristMenu.csproj
+++ b/Steal/WristMenu.csproj
@@ -19,6 +19,8 @@
   <ItemGroup>
     <None Remove="Background\NameTags" />
     <None Remove="Background\NewFile1.txt" />
+    <None Remove="Components\ModsList" />
+    <None Remove="Components\NewFile1.txt" />
     <None Remove="Resources\click" />
   </ItemGroup>
 
